update to J11 upstream dep